Fixing spacing around wrap.

--- a/assets/sass/block/_chrome.scss
+++ b/assets/sass/block/_chrome.scss
@@ -24,4 +24,5 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    padding: 15px;
 }
